--- a/SiteAgenceImmobilière/config/routes.yaml
+++ b/SiteAgenceImmobilière/config/routes.yaml
@@ -1,3 +1,10 @@
+# homepage
+home:
+  # chemin racine
+  path: /
+  # methode::class
+  controller: App\controller\HomeController::index
+
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
